# wasm-worker-vite-starter

./: .editorconfig  .gitignore  .ignore  Cargo.toml  README.md  biome.json  dprint.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: playwright.yaml  test.yaml  wasm-bindgen-test.yaml
assets/css/: main.css  reset.css
assets/js/: App.tsx  main.tsx  worker.ts
e2e/: index.spec.ts
src/: lib.rs
tests/: App.spec.tsx
