[package]
name = "wasm-worker-vite-starter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.95"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'console',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerType'
]

[profile.release]
lto = true
